# OS-final-project

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: dijkstra.h  graph.h  gui.h  gui_m4.h  ipc.h  scheduler.h  skip_comments.h  sync.h  travelers.h
src/: dijkstra.c  graph.c  gui.c  gui_m4.c  ipc.c  main.c  main_m1.c  main_m5.c  main_m7.c  scheduler.c  sync.c  travelers.c
tests/: input2.txt  input_m6.txt  input_m7.txt  input_sched_race.txt
